Implementada documentação e Banco de Dados na Nuvem

--- a/atitusound/src/main/resources/application.properties
+++ b/atitusound/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.datasource.url= jdbc:postgresql://localhost/db_atitusound_a
-spring.datasource.username=postgres
-spring.datasource.password=7ZK1UrkJikkUqstnqT6s
+spring.datasource.url= jdbc:postgresql://babar.db.elephantsql.com/qiyhjpvp
+spring.datasource.username=qiyhjpvp
+spring.datasource.password=FHq4Cr8tX81Q7yDC_Jounzy9jUjGOC3J
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+spring.datasource.hikari.maximum-pool-size=3
